--- a/email_instructor.ipynb
+++ b/email_instructor.ipynb
@@ -6,47 +6,231 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-08-06T17:42:04.180255Z",
-     "start_time": "2025-08-06T17:42:03.662294Z"
+     "end_time": "2025-08-06T20:40:13.407978Z",
+     "start_time": "2025-08-06T20:40:13.403481Z"
     }
    },
    "source": [
-    "# The imports\n",
+    "# pip install sendgrid\n",
+    "# pip install openai-agents\n",
     "\n",
     "from dotenv import load_dotenv\n",
-    "from agents import Agent, Runner, trace\n",
-    "\n",
-    "# pip install openai-agents\n",
+    "from agents import Agent, Runner, trace, function_tool\n",
+    "from typing import Dict\n",
+    "import sendgrid\n",
+    "import os\n",
+    "from sendgrid.helpers.mail import Mail, Email, To, Content\n",
     "\n",
     "load_dotenv(override=True)"
    ],
-   "outputs": [],
-   "execution_count": 1
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "# Make an agent with name, instructions, model\n",
-    "agent = Agent(name=\"Jokester\", instructions=\"You are a joke teller\", model=\"gpt-4o-mini\")"
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
    ],
-   "id": "59ceca5e61cabd96"
+   "execution_count": 40
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-06T20:40:13.421524Z",
+     "start_time": "2025-08-06T20:40:13.419679Z"
+    }
+   },
    "cell_type": "code",
+   "source": "llm_model = \"gpt-4o-mini\"",
+   "id": "3ef8355f35c9676b",
    "outputs": [],
-   "execution_count": null,
+   "execution_count": 41
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-06T20:40:13.434808Z",
+     "start_time": "2025-08-06T20:40:13.432784Z"
+    }
+   },
+   "cell_type": "code",
    "source": [
-    "# Run the joke with Runner.run(agent, prompt) then print final_output\n",
+    "prof_instructions = \"You are a sales agent working for idare.ai, \\\n",
+    "a company that provides zero-code predictive analytics solution powered by AI. \\\n",
+    "You write professional, serious cold emails.\"\n",
     "\n",
-    "with trace(\"Telling a joke\"):\n",
-    "    result = await Runner.run(agent, \"Tell a joke about doctors\")\n",
-    "    print(result.final_output)"
+    "witty_instructions = \"You are a humorous, engaging sales agent working for idare.ai, \\\n",
+    "a company that provides zero-code predictive analytics solution, powered by AI. \\\n",
+    "You write witty, engaging cold emails that are likely to get a response.\"\n",
+    "\n",
+    "busy_instructions = \"You are a busy sales agent working for idare.ai, \\\n",
+    "a company that provides provides zero-code predictive analytics solution, powered by AI. \\\n",
+    "You write concise, to the point cold emails.\"\n",
+    "\n",
+    "subject_instructions = \"You can write a subject for a cold sales email. \\\n",
+    "You are given a message and you need to write a subject for an email that is likely to get a response.\"\n",
+    "\n",
+    "html_instructions = \"You can convert a text email body to an HTML email body. \\\n",
+    "You are given a text email body which might have some markdown \\\n",
+    "and you need to convert it to an HTML email body with simple, clear, compelling layout and design.\"\n",
+    "\n",
+    "sales_manager_instructions = \"\"\"\n",
+    "You are a Sales Manager at idare.ai. Your goal is to find the single best cold sales email using the sales tools.\n",
+    "\n",
+    "Follow these steps carefully:\n",
+    "1. Generate Drafts: Use all three sales tools (prof_sales, witty_sales, busy_sales) to generate three different email drafts. Do not proceed until all three drafts are ready.\n",
+    "\n",
+    "2. Evaluate and Select: Review the drafts and choose the single best email using your judgment of which one is most effective.\n",
+    "\n",
+    "3. Handoff for Sending: Pass ONLY the winning email draft to the 'Email Manager' agent. The Email Manager will take care of formatting and sending.\n",
+    "\n",
+    "Crucial Rules:\n",
+    "- You must use the sales agent tools to generate the drafts — do not write them yourself.\n",
+    "- You must hand off exactly ONE email to the Email Manager — never more than one.\n",
+    "\"\"\"\n",
+    "\n",
+    "email_manager_instructions =\"You are an email formatter and sender. You receive the body of an email to be sent. \\\n",
+    "You first use the subject_writer tool to write a subject for the email, then use the html_converter tool to convert the body to HTML. \\\n",
+    "Finally, you use the send_html_email tool to send the email with the subject and HTML body.\"\n",
+    "\n",
+    "prompt = \"Send out a cold sales email addressed to Dear CTO Dr. Khairul Chowdhury from Kawsar, Data Scientist at idare.ai\""
    ],
-   "id": "9fb7bcb1bb6fedb2"
+   "id": "9fb7bcb1bb6fedb2",
+   "outputs": [],
+   "execution_count": 42
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-06T20:40:13.440328Z",
+     "start_time": "2025-08-06T20:40:13.438513Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "prof_sales_agent = Agent(name=\"Professional Sales Agent\",\n",
+    "                         instructions=prof_instructions,\n",
+    "                         model=llm_model)\n",
+    "\n",
+    "witty_sales_agent = Agent(name=\"Engaging Sales Agent\",\n",
+    "                          instructions=witty_instructions,\n",
+    "                          model=llm_model)\n",
+    "\n",
+    "busy_sales_agent = Agent(name=\"Busy Sales Agent\",\n",
+    "                         instructions=busy_instructions,\n",
+    "                         model=llm_model)\n",
+    "\n",
+    "subject_writer = Agent(name=\"Email subject writer\",\n",
+    "                       instructions=subject_instructions,\n",
+    "                       model=llm_model)\n",
+    "\n",
+    "html_converter = Agent(name=\"HTML email body converter\",\n",
+    "                       instructions=html_instructions,\n",
+    "                       model=llm_model)"
+   ],
+   "id": "1fd80ac19f90591b",
+   "outputs": [],
+   "execution_count": 43
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-06T20:40:13.446267Z",
+     "start_time": "2025-08-06T20:40:13.442962Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "sales_agent_description = \"Write a cold sales email\"\n",
+    "prof_sales = prof_sales_agent.as_tool(tool_name=\"prof_sales_agent\",\n",
+    "                                      tool_description=sales_agent_description)\n",
+    "witty_sales = witty_sales_agent.as_tool(tool_name=\"witty_sales_agent\",\n",
+    "                                        tool_description=sales_agent_description)\n",
+    "busy_sales = busy_sales_agent.as_tool(tool_name=\"busy_sales_agent\",\n",
+    "                                      tool_description=sales_agent_description)\n",
+    "\n",
+    "subject_tool = subject_writer.as_tool(tool_name=\"subject_writer\",\n",
+    "                                      tool_description=\"Write a subject for a cold sales email\")\n",
+    "\n",
+    "html_tool = html_converter.as_tool(tool_name=\"html_converter\",\n",
+    "                                   tool_description=\"Convert a text email body to an HTML email body\")"
+   ],
+   "id": "6340bcd732b31c93",
+   "outputs": [],
+   "execution_count": 44
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-06T20:40:13.457644Z",
+     "start_time": "2025-08-06T20:40:13.454679Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "@function_tool\n",
+    "def send_html_email(subject: str, html_body: str) -> Dict[str, str]:\n",
+    "    \"\"\" Send out an email with the given subject and HTML body to all sales prospects \"\"\"\n",
+    "    try:\n",
+    "        sg = sendgrid.SendGridAPIClient(api_key=os.environ.get('SENDGRID_API_KEY'))\n",
+    "        from_email = Email(sender_email)  # Change to your verified sender\n",
+    "        to_email = To(receiver_email)  # Change to your recipient\n",
+    "        content = Content(\"text/html\", html_body)\n",
+    "        mail = Mail(from_email, to_email, subject, content).get()\n",
+    "        sg.client.mail.send.post(request_body=mail)\n",
+    "        return {\"status\": \"success\"}\n",
+    "    except Exception as e:\n",
+    "        return {\"status\": \"error\", \"message\": str(e)}"
+   ],
+   "id": "bbc86be486318438",
+   "outputs": [],
+   "execution_count": 46
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-06T20:40:13.462521Z",
+     "start_time": "2025-08-06T20:40:13.460742Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "emailer_agent = Agent(name=\"Email Manager\",\n",
+    "                      instructions=email_manager_instructions,\n",
+    "                      tools=[subject_tool, html_tool, send_html_email],\n",
+    "                      model=llm_model,\n",
+    "                      handoff_description=\"Convert an email to HTML and send it\")\n",
+    "\n",
+    "sales_manager = Agent(name=\"Sales Manager\",\n",
+    "                      instructions=sales_manager_instructions,\n",
+    "                      tools=[prof_sales, witty_sales, busy_sales],\n",
+    "                      handoffs=[emailer_agent],\n",
+    "                      model=llm_model)"
+   ],
+   "id": "a69b3586584931d3",
+   "outputs": [],
+   "execution_count": 47
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-06T20:41:16.641213Z",
+     "start_time": "2025-08-06T20:41:16.639733Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "with trace(\"Automated SDR\"):\n",
+    "    result = await Runner.run(sales_manager, prompt)\n",
+    "    print(result)"
+   ],
+   "id": "7a3c645f8722ce5f",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -56,7 +240,7 @@
     "\n",
     "https://platform.openai.com/traces"
    ],
-   "id": "2e4a50f9f4cb5e3b"
+   "id": "3694d6ec82082b55"
   }
  ],
  "metadata": {
