- fixed the await issue in the py file

--- a/sales_email_agents.ipynb
+++ b/sales_email_agents.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-08-06T20:52:50.378932Z",
-     "start_time": "2025-08-06T20:52:50.373659Z"
+     "end_time": "2025-08-06T21:04:19.431501Z",
+     "start_time": "2025-08-06T21:04:19.428593Z"
     }
    },
    "source": [
@@ -30,31 +30,35 @@
        "True"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 57
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-06T20:52:50.395834Z",
-     "start_time": "2025-08-06T20:52:50.394133Z"
+     "end_time": "2025-08-06T21:04:19.442653Z",
+     "start_time": "2025-08-06T21:04:19.440653Z"
     }
    },
    "cell_type": "code",
-   "source": "llm_model = \"gpt-4o-mini\"",
+   "source": [
+    "llm_model = \"gpt-4o-mini\"\n",
+    "sender_email = os.environ[\"SENDER_EMAIL\"]\n",
+    "receiver_email = os.environ[\"RECEIVER_EMAIL\"]"
+   ],
    "id": "3ef8355f35c9676b",
    "outputs": [],
-   "execution_count": 58
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-06T20:52:50.409603Z",
-     "start_time": "2025-08-06T20:52:50.407043Z"
+     "end_time": "2025-08-06T21:04:19.451036Z",
+     "start_time": "2025-08-06T21:04:19.448730Z"
     }
    },
    "cell_type": "code",
@@ -97,17 +101,17 @@
     "You first use the subject_writer tool to write a subject for the email, then use the html_converter tool to convert the body to HTML. \\\n",
     "Finally, you use the send_html_email tool to send the email with the subject and HTML body.\"\n",
     "\n",
-    "prompt = \"Send out a cold sales email addressed to Dear CTO Dr. Taufiq Chowdhury from Kawsar, Data Scientist at idare.ai\""
+    "prompt = \"Send out a cold sales email addressed to Dear CTO Dr. Khairul Chowdhury from Kawsar, Data Scientist at idare.ai\""
    ],
    "id": "9fb7bcb1bb6fedb2",
    "outputs": [],
-   "execution_count": 59
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-06T20:52:50.415232Z",
-     "start_time": "2025-08-06T20:52:50.413221Z"
+     "end_time": "2025-08-06T21:04:19.455723Z",
+     "start_time": "2025-08-06T21:04:19.453626Z"
     }
    },
    "cell_type": "code",
@@ -134,13 +138,13 @@
    ],
    "id": "1fd80ac19f90591b",
    "outputs": [],
-   "execution_count": 60
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-06T20:52:50.422667Z",
-     "start_time": "2025-08-06T20:52:50.418468Z"
+     "end_time": "2025-08-06T21:04:19.463156Z",
+     "start_time": "2025-08-06T21:04:19.458301Z"
     }
    },
    "cell_type": "code",
@@ -161,13 +165,13 @@
    ],
    "id": "6340bcd732b31c93",
    "outputs": [],
-   "execution_count": 61
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-06T20:52:50.427989Z",
-     "start_time": "2025-08-06T20:52:50.425555Z"
+     "end_time": "2025-08-06T21:04:19.467611Z",
+     "start_time": "2025-08-06T21:04:19.465167Z"
     }
    },
    "cell_type": "code",
@@ -188,13 +192,13 @@
    ],
    "id": "bbc86be486318438",
    "outputs": [],
-   "execution_count": 62
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-06T20:52:50.432157Z",
-     "start_time": "2025-08-06T20:52:50.430523Z"
+     "end_time": "2025-08-06T21:04:19.471165Z",
+     "start_time": "2025-08-06T21:04:19.469511Z"
     }
    },
    "cell_type": "code",
@@ -213,13 +217,13 @@
    ],
    "id": "a69b3586584931d3",
    "outputs": [],
-   "execution_count": 63
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-06T20:53:55.562509Z",
-     "start_time": "2025-08-06T20:52:50.435423Z"
+     "end_time": "2025-08-06T21:05:06.292019Z",
+     "start_time": "2025-08-06T21:04:19.474251Z"
     }
    },
    "cell_type": "code",
@@ -237,7 +241,7 @@
       "RunResult:\n",
       "- Last agent: Agent(name=\"Email Manager\", ...)\n",
       "- Final output (str):\n",
-      "    The cold sales email has been successfully sent to Dr. Taufiq Chowdhury with the subject \"Unlock Your Potential with Predictive Analytics!\" and the HTML body properly formatted. If you need any further assistance, feel free to ask!\n",
+      "    The cold sales email has been successfully sent to Dr. Khairul Chowdhury. If you need anything else, feel free to ask!\n",
       "- 16 new item(s)\n",
       "- 5 raw response(s)\n",
       "- 0 input guardrail result(s)\n",
@@ -246,7 +250,7 @@
      ]
     }
    ],
-   "execution_count": 64
+   "execution_count": 24
   },
   {
    "metadata": {},
