--- a/sales_email_agents.ipynb
+++ b/sales_email_agents.ipynb
@@ -1,8 +1,32 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "id": "initial_id",
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# How to Automate Cold-Email Outreach with LLM Agents\n",
+    "\n",
+    "Why Automate Cold Emails?\n",
+    "<br>Sending effective, personalized cold emails is time-consuming:\n",
+    "- You want variants of professional, witty, or concise emails to A/B test.\n",
+    "- You must pick the best draft, not just any draft.\n",
+    "- You need compelling subject lines.\n",
+    "- You have to convert text to HTML so it renders nicely.\n",
+    "- Finally, you still need to deliver via an Email Service Provider like SendGrid.\n",
+    "\n",
+    "A modern agent framework lets each of these steps become an agent or tool. We simply orchestrate them.\n",
+    "\n",
+    "Install these packages:\n",
+    "<br>`pip install sendgrid openai-agents`\n",
+    "\n",
+    "- sendgrid – handles SMTP-class deliverability with minimal fuss.\n",
+    "- openai-agents – lets us compose “agents” (LLM instances + instructions + tools) into directed workflows.\n",
+    "\n",
+    "We then load API keys (OPENAI_API_KEY, SENDGRID_API_KEY) and email addresses (SENDER_EMAIL, RECEIVER_EMAIL) from a .env file, keeping secrets out of source control."
+   ],
+   "id": "84a47cfd979d3716"
+  },
+  {
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
@@ -10,19 +34,7 @@
      "start_time": "2025-08-06T21:04:19.428593Z"
     }
    },
-   "source": [
-    "# pip install sendgrid\n",
-    "# pip install openai-agents\n",
-    "\n",
-    "from dotenv import load_dotenv\n",
-    "from agents import Agent, Runner, trace, function_tool\n",
-    "from typing import Dict\n",
-    "import sendgrid\n",
-    "import os\n",
-    "from sendgrid.helpers.mail import Mail, Email, To, Content\n",
-    "\n",
-    "load_dotenv(override=True)"
-   ],
+   "cell_type": "code",
    "outputs": [
     {
      "data": {
@@ -35,7 +47,18 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 17
+   "execution_count": 17,
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "from agents import Agent, Runner, trace, function_tool\n",
+    "from typing import Dict\n",
+    "import sendgrid\n",
+    "import os\n",
+    "from sendgrid.helpers.mail import Mail, Email, To, Content\n",
+    "\n",
+    "load_dotenv(override=True)"
+   ],
+   "id": "f6e314371f01dd26"
   },
   {
    "metadata": {
@@ -46,6 +69,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# Configuration & credentials\n",
     "llm_model = \"gpt-4o-mini\"\n",
     "sender_email = os.environ[\"SENDER_EMAIL\"]\n",
     "receiver_email = os.environ[\"RECEIVER_EMAIL\"]"
@@ -53,6 +77,21 @@
    "id": "3ef8355f35c9676b",
    "outputs": [],
    "execution_count": 18
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Prompt instructions for agents\n",
+    "\n",
+    "Three distinct prompt templates:\n",
+    "- Professional Tone, Use-case: Formal, serious\tEnterprise / C-suite\n",
+    "- Witty, Use-case: Humorous, disarming\tStartups / creative directors\n",
+    "- Busy Tone, Use-case: Ultra-concise\tHard-pressed execs\n",
+    "\n",
+    "Creating diversity up-front gives the Sales Manager real choices."
+   ],
+   "id": "cc42f6ce9acf7e14"
   },
   {
    "metadata": {
@@ -108,6 +147,17 @@
    "execution_count": 19
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Turning Prompts into Agents\n",
+    "An Agent is basically LLM + system prompt with optional tools.\n",
+    "\n",
+    "Each agent here has no extra tools – it just writes an email when called."
+   ],
+   "id": "a9ee0f8c887ec83c"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-08-06T21:04:19.455723Z",
@@ -139,6 +189,14 @@
    "id": "1fd80ac19f90591b",
    "outputs": [],
    "execution_count": 20
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "dfadf52ac316bcbe"
   },
   {
    "metadata": {
