--- a/sales_email_agents.ipynb
+++ b/sales_email_agents.ipynb
@@ -153,7 +153,15 @@
     "### Turning Prompts into Agents\n",
     "An Agent is basically LLM + system prompt with optional tools.\n",
     "\n",
-    "Each agent here has no extra tools – it just writes an email when called."
+    "Each agent here has no extra tools – it just writes an email when called.\n",
+    "\n",
+    "Subject lines and HTML formatting are specialized skills. Small, focused prompts make the LLM sharper at these micro-tasks.\n",
+    "\n",
+    "subject_writer: turns the email body into an irresistible subject.\n",
+    "\n",
+    "html_converter: converts Markdown-ish text into responsive HTML.\n",
+    "\n",
+    "Both are exposed as tools so downstream agents can call them."
    ],
    "id": "a9ee0f8c887ec83c"
   },
@@ -192,11 +200,9 @@
   },
   {
    "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "dfadf52ac316bcbe"
+   "cell_type": "markdown",
+   "source": "### Convert Agents into Tools",
+   "id": "4d79edbc7966231b"
   },
   {
    "metadata": {
@@ -226,6 +232,18 @@
    "execution_count": 21
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Everything so far has been pure text. We still need to actually send.\n",
+    "\n",
+    "A small Python function wrapped by @function_tool lets agents trigger real I/O.\n",
+    "\n",
+    "If SendGrid replies with an error, the agent chain can propagate it."
+   ],
+   "id": "34d60c4c5f26f860"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-08-06T21:04:19.467611Z",
@@ -253,6 +271,35 @@
    "execution_count": 22
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "The Email Manager Agent\n",
+    "<br>Role: format and deliver the winning draft.\n",
+    "\n",
+    "Its toolbox:\n",
+    "- `subject_writer`\n",
+    "- `html_converter`\n",
+    "- `send_html_email`\n",
+    "\n",
+    "Its instruction set forces the exact ordering:\n",
+    "- Generate subject\n",
+    "- Convert to HTML\n",
+    "- Send via SendGrid\n",
+    "\n",
+    "Because each tool is explicit, you get reliable, auditable steps.\n",
+    "\n",
+    "The Sales Manager Agent\n",
+    "<br>This is the orchestrator:\n",
+    "- Calls all three drafting tools in parallel.\n",
+    "- Evaluates and picks one draft.\n",
+    "- Hands that draft off to the Email Manager.\n",
+    "\n",
+    "The “handoff” mechanic in openai-agents is powerful: the Sales Manager doesn’t need to know how to send email – it merely passes control."
+   ],
+   "id": "2bee986389dfb6f2"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-08-06T21:04:19.471165Z",
@@ -276,6 +323,28 @@
    "id": "a69b3586584931d3",
    "outputs": [],
    "execution_count": 23
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "trace() logs each tool call and LLM message, invaluable for debugging and analytics (e.g., see which persona wins most often).\n",
+    "\n",
+    "Runner.run() kicks off the graph:\n",
+    "\n",
+    "User prompt → Sales Manager\n",
+    "   <br>&emsp;├─▶ prof_sales_agent\n",
+    "   <br>&emsp;├─▶ witty_sales_agent\n",
+    "   <br>&emsp;└─▶ busy_sales_agent\n",
+    "<br>Sales Manager picks a winner\n",
+    "   <br>&emsp;└─▶ Email Manager\n",
+    "         <br>&emsp;&emsp;&emsp;&emsp;&emsp;├─▶ subject_writer\n",
+    "         <br>&emsp;&emsp;&emsp;&emsp;&emsp;├─▶ html_converter\n",
+    "         <br>&emsp;&emsp;&emsp;&emsp;&emsp;└─▶ send_html_email\n",
+    "\n",
+    "Finally the program prints the result (success or error)\n"
+   ],
+   "id": "6c163559e8d32e06"
   },
   {
    "metadata": {
@@ -319,6 +388,30 @@
     "https://platform.openai.com/traces"
    ],
    "id": "3694d6ec82082b55"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "By decomposing each micro-step of outbound outreach into a specialized agent or tool, we gain:\n",
+    "\n",
+    "Modularity – swap out, retrain, or fine-tune individual parts.\n",
+    "\n",
+    "Observability – inspect traces to debug failure points.\n",
+    "\n",
+    "Scalability – run thousands of emails in parallel with minimal extra code.\n",
+    "\n",
+    "In short, LLM agents plus a reliable ESP turn the cold emailing into a fully-automated, measurable pipeline—freeing you to focus on higher-level strategy."
+   ],
+   "id": "795b9a720f851cd1"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "2c6b474141daa350"
   }
  ],
  "metadata": {
