- updated web research agent

--- a/web_research_agent.ipynb
+++ b/web_research_agent.ipynb
@@ -14,8 +14,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T18:54:30.812083Z",
-     "start_time": "2025-08-07T18:54:30.254485Z"
+     "end_time": "2025-08-07T20:11:46.336520Z",
+     "start_time": "2025-08-07T20:11:46.333471Z"
     }
    },
    "source": [
@@ -31,14 +31,14 @@
     "from IPython.display import display, Markdown"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 10
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T18:54:35.862068Z",
-     "start_time": "2025-08-07T18:54:35.853192Z"
+     "end_time": "2025-08-07T20:11:46.350290Z",
+     "start_time": "2025-08-07T20:11:46.347267Z"
     }
    },
    "source": [
@@ -51,12 +51,29 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-07T20:11:46.362671Z",
+     "start_time": "2025-08-07T20:11:46.360983Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Configuration & credentials\n",
+    "llm_model = \"gpt-4o-mini\"\n",
+    "sender_email = os.environ[\"SENDER_EMAIL\"]\n",
+    "receiver_email = os.environ[\"RECEIVER_EMAIL\"]"
+   ],
+   "outputs": [],
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
@@ -73,43 +90,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-07T20:11:46.370047Z",
+     "start_time": "2025-08-07T20:11:46.368213Z"
+    }
+   },
+   "source": [
+    "research_instructions = \"\"\"You are a research assistant. Given a search term,\n",
+    "you search the web for that term and produce a concise summary of the results.\n",
+    "The summary must be less than 100 words. Capture the main points.\n",
+    "This will be consumed by someone synthesizing a report, so it's vital you capture\n",
+    "the essence and ignore any fluff. Do not include any additional commentary other\n",
+    "than the summary itself.\"\"\"\n",
+    "\n",
+    "search_agent = Agent(name=\"Search agent\",\n",
+    "                     instructions=research_instructions,\n",
+    "                     tools=[WebSearchTool(search_context_size=\"low\")],\n",
+    "                     model=llm_model,\n",
+    "                     model_settings=ModelSettings(tool_choice=\"required\"))"
+   ],
    "outputs": [],
-   "source": [
-    "INSTRUCTIONS = \"You are a research assistant. Given a search term, you search \\ the web for that term and produce a concise summary of the results. \\ The summary must 2-3 paragraphs and less than 300 words. Capture the main points. \\ This will be consumed by someone synthesizing a report, so it's vital you \\ capture the essence and ignore any fluff. Do not include any \\ additional commentary other than the summary itself.\"\n",
-    "\n",
-    "search_agent = Agent(\n",
-    "    name=\"Search agent\",\n",
-    "    instructions=INSTRUCTIONS,\n",
-    "    tools=[WebSearchTool(search_context_size=\"low\")],\n",
-    "    model=\"gpt-4o-mini\",\n",
-    "    model_settings=ModelSettings(tool_choice=\"required\"),\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "message = \"Latest AI Agent frameworks in 2025\"\n",
-    "\n",
-    "with trace(\"Search\"):\n",
-    "    result = await Runner.run(search_agent, message)\n",
-    "\n",
-    "display(Markdown(result.final_output))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### As always, take a look at the trace\n",
-    "\n",
-    "https://platform.openai.com/traces"
-   ]
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -120,23 +122,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-07T20:11:46.374419Z",
+     "start_time": "2025-08-07T20:11:46.372157Z"
+    }
+   },
    "source": [
-    "# See note above about cost of WebSearchTool\n",
-    "\n",
     "HOW_MANY_SEARCHES = 3\n",
     "\n",
-    "INSTRUCTIONS = f\"You are a helpful research assistant. Given a query, come up with a set of web searches \\\n",
-    "to perform to best answer the query. Output {HOW_MANY_SEARCHES} terms to query for.\"\n",
+    "planner_instructions = (f\"You are a helpful research assistant. Given a query, \"\n",
+    "                        f\"come up with a set of web searches to respond with the best answer of the user query. Output {HOW_MANY_SEARCHES} terms to query for.\")\n",
     "\n",
     "# Use Pydantic to define the Schema of our response - this is known as \"Structured Outputs\"\n",
-    "# With massive thanks to student Wes C. for discovering and fixing a nasty bug with this!\n",
-    "\n",
     "class WebSearchItem(BaseModel):\n",
     "    reason: str = Field(description=\"Your reasoning for why this search is important to the query.\")\n",
-    "\n",
     "    query: str = Field(description=\"The search term to use for the web search.\")\n",
     "\n",
     "\n",
@@ -144,88 +144,71 @@
     "    searches: list[WebSearchItem] = Field(description=\"A list of web searches to perform to best answer the query.\")\n",
     "\n",
     "\n",
-    "planner_agent = Agent(\n",
-    "    name=\"PlannerAgent\",\n",
-    "    instructions=INSTRUCTIONS,\n",
-    "    model=\"gpt-4o-mini\",\n",
-    "    output_type=WebSearchPlan,\n",
-    ")"
-   ]
+    "planner_agent = Agent(name=\"PlannerAgent\",\n",
+    "                      instructions=planner_instructions,\n",
+    "                      model=llm_model,\n",
+    "                      output_type=WebSearchPlan)"
+   ],
+   "outputs": [],
+   "execution_count": 14
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "message = \"Latest AI Agent frameworks in 2025\"\n",
-    "\n",
-    "with trace(\"Search\"):\n",
-    "    result = await Runner.run(planner_agent, message)\n",
-    "    print(result.final_output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-07T20:11:46.379662Z",
+     "start_time": "2025-08-07T20:11:46.376500Z"
+    }
+   },
    "source": [
     "@function_tool\n",
     "def send_email(subject: str, html_body: str) -> Dict[str, str]:\n",
     "    \"\"\" Send out an email with the given subject and HTML body \"\"\"\n",
     "    sg = sendgrid.SendGridAPIClient(api_key=os.environ.get('SENDGRID_API_KEY'))\n",
-    "    from_email = Email(\"ed@edwarddonner.com\") # Change this to your verified email\n",
-    "    to_email = To(\"ed.donner@gmail.com\") # Change this to your email\n",
+    "    from_email = Email(sender_email) # Change this to your verified email\n",
+    "    to_email = To(receiver_email) # Change this to your email\n",
     "    content = Content(\"text/html\", html_body)\n",
     "    mail = Mail(from_email, to_email, subject, content).get()\n",
     "    response = sg.client.mail.send.post(request_body=mail)\n",
     "    return {\"status\": \"success\"}"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 15
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-07T20:11:46.383081Z",
+     "start_time": "2025-08-07T20:11:46.381634Z"
+    }
+   },
    "source": [
-    "send_email"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "INSTRUCTIONS = \"\"\"You are able to send a nicely formatted HTML email based on a detailed report.\n",
-    "You will be provided with a detailed report. You should use your tool to send one email, providing the \n",
-    "report converted into clean, well presented HTML with an appropriate subject line.\"\"\"\n",
+    "email_instructions = \"\"\"You are able to send a nicely formatted HTML email based on a detailed report. You will be provided with a detailed report. You should use your tool to send one email, providing the report converted into clean, well presented HTML with an appropriate subject line.\"\"\"\n",
     "\n",
-    "email_agent = Agent(\n",
-    "    name=\"Email agent\",\n",
-    "    instructions=INSTRUCTIONS,\n",
-    "    tools=[send_email],\n",
-    "    model=\"gpt-4o-mini\",\n",
-    ")\n",
-    "\n"
-   ]
+    "email_agent = Agent(name=\"Email agent\",\n",
+    "                    instructions=email_instructions,\n",
+    "                    tools=[send_email],\n",
+    "                    model=llm_model)"
+   ],
+   "outputs": [],
+   "execution_count": 16
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-07T20:11:46.387231Z",
+     "start_time": "2025-08-07T20:11:46.385156Z"
+    }
+   },
    "source": [
-    "INSTRUCTIONS = (\n",
-    "    \"You are a senior researcher tasked with writing a cohesive report for a research query. \"\n",
-    "    \"You will be provided with the original query, and some initial research done by a research assistant.\\n\"\n",
-    "    \"You should first come up with an outline for the report that describes the structure and \"\n",
-    "    \"flow of the report. Then, generate the report and return that as your final output.\\n\"\n",
-    "    \"The final output should be in markdown format, and it should be lengthy and detailed. Aim \"\n",
-    "    \"for 5-10 pages of content, at least 1000 words.\"\n",
-    ")\n",
+    "writer_instructions = \"\"\"You are a senior researcher tasked with writing a cohesive report for a research query. You will be provided with the original query, and some initial research done by a research assistant.\n",
+    "\n",
+    "You should first come up with an outline for the report that describes the structure and\n",
+    "flow of the report. Then, generate the report and return that as your final output. The\n",
+    "final output should be in markdown format, and it should be lengthy and detailed. Aim for\n",
+    "1-2 pages of content, at least 200 words.\"\"\"\n",
     "\n",
     "\n",
     "class ReportData(BaseModel):\n",
@@ -238,11 +221,13 @@
     "\n",
     "writer_agent = Agent(\n",
     "    name=\"WriterAgent\",\n",
-    "    instructions=INSTRUCTIONS,\n",
-    "    model=\"gpt-4o-mini\",\n",
+    "    instructions=writer_instructions,\n",
+    "    model=llm_model,\n",
     "    output_type=ReportData,\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -253,31 +238,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-07T20:11:46.391405Z",
+     "start_time": "2025-08-07T20:11:46.389091Z"
+    }
+   },
    "source": [
-    "async def plan_searches(query: str):\n",
+    "async def plan_searches(user_query: str):\n",
     "    \"\"\" Use the planner_agent to plan which searches to run for the query \"\"\"\n",
     "    print(\"Planning searches...\")\n",
-    "    result = await Runner.run(planner_agent, f\"Query: {query}\")\n",
+    "    result = await Runner.run(planner_agent, f\"Query: {user_query}\")\n",
     "    print(f\"Will perform {len(result.final_output.searches)} searches\")\n",
     "    return result.final_output\n",
     "\n",
-    "async def perform_searches(search_plan: WebSearchPlan):\n",
+    "async def perform_searches(plan_search: WebSearchPlan):\n",
     "    \"\"\" Call search() for each item in the search plan \"\"\"\n",
     "    print(\"Searching...\")\n",
-    "    tasks = [asyncio.create_task(search(item)) for item in search_plan.searches]\n",
+    "    tasks = [asyncio.create_task(search(item)) for item in plan_search.searches]\n",
     "    results = await asyncio.gather(*tasks)\n",
     "    print(\"Finished searching\")\n",
     "    return results\n",
     "\n",
     "async def search(item: WebSearchItem):\n",
     "    \"\"\" Use the search agent to run a web search for each item in the search plan \"\"\"\n",
-    "    input = f\"Search term: {item.query}\\nReason for searching: {item.reason}\"\n",
-    "    result = await Runner.run(search_agent, input)\n",
+    "    search_input = f\"Search term: {item.query}\\nReason for searching: {item.reason}\"\n",
+    "    result = await Runner.run(search_agent, search_input)\n",
     "    return result.final_output"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 18
   },
   {
    "cell_type": "markdown",
@@ -288,25 +278,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-07T20:11:46.395383Z",
+     "start_time": "2025-08-07T20:11:46.393502Z"
+    }
+   },
    "source": [
-    "async def write_report(query: str, search_results: list[str]):\n",
+    "async def write_report(user_query: str, search_result: list[str]):\n",
     "    \"\"\" Use the writer agent to write a report based on the search results\"\"\"\n",
     "    print(\"Thinking about report...\")\n",
-    "    input = f\"Original query: {query}\\nSummarized search results: {search_results}\"\n",
-    "    result = await Runner.run(writer_agent, input)\n",
+    "    writer_input = f\"Original query: {user_query}\\nSummarized search results: {search_result}\"\n",
+    "    result = await Runner.run(writer_agent, writer_input)\n",
     "    print(\"Finished writing report\")\n",
     "    return result.final_output\n",
     "\n",
-    "async def send_email(report: ReportData):\n",
+    "async def send_email(writer_report: ReportData):\n",
     "    \"\"\" Use the email agent to send an email with the report \"\"\"\n",
     "    print(\"Writing email...\")\n",
-    "    result = await Runner.run(email_agent, report.markdown_report)\n",
+    "    result = await Runner.run(email_agent, writer_report.markdown_report)\n",
     "    print(\"Email sent\")\n",
-    "    return report"
-   ]
+    "    return writer_report"
+   ],
+   "outputs": [],
+   "execution_count": 19
   },
   {
    "cell_type": "markdown",
@@ -317,9 +312,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-07T20:12:45.523252Z",
+     "start_time": "2025-08-07T20:11:46.398075Z"
+    }
+   },
    "source": [
     "query =\"Latest AI Agent frameworks in 2025\"\n",
     "\n",
@@ -332,7 +330,26 @@
     "    print(\"Hooray!\")\n",
     "\n",
     "\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting research...\n",
+      "Planning searches...\n",
+      "Will perform 3 searches\n",
+      "Searching...\n",
+      "Finished searching\n",
+      "Thinking about report...\n",
+      "Finished writing report\n",
+      "Writing email...\n",
+      "Email sent\n",
+      "Hooray!\n"
+     ]
+    }
+   ],
+   "execution_count": 20
   },
   {
    "cell_type": "markdown",
@@ -341,23 +358,6 @@
     "### As always, take a look at the trace\n",
     "\n",
     "https://platform.openai.com/traces"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<table style=\"margin: 0; text-align: left; width:100%\">\n",
-    "    <tr>\n",
-    "        <td style=\"width: 150px; height: 150px; vertical-align: middle;\">\n",
-    "            <img src=\"../assets/thanks.png\" width=\"150\" height=\"150\" style=\"display: block;\" />\n",
-    "        </td>\n",
-    "        <td>\n",
-    "            <h2 style=\"color:#00cc00;\">Congratulations on your progress, and a request</h2>\n",
-    "            <span style=\"color:#00cc00;\">You've reached an important moment with the course; you've created a valuable Agent using one of the latest Agent frameworks. You've upskilled, and unlocked new commercial possibilities. Take a moment to celebrate your success!<br/><br/>Something I should ask you -- my editor would smack me if I didn't mention this. If you're able to rate the course on Udemy, I'd be seriously grateful: it's the most important way that Udemy decides whether to show the course to others and it makes a massive difference.<br/><br/>And another reminder to <a href=\"https://www.linkedin.com/in/eddonner/\">connect with me on LinkedIn</a> if you wish! If you wanted to post about your progress on the course, please tag me and I'll weigh in to increase your exposure.\n",
-    "            </span>\n",
-    "        </td>\n",
-    "    </tr>"
    ]
   }
  ],
