- updated web research agent

--- a/web_research_agent.ipynb
+++ b/web_research_agent.ipynb
@@ -326,10 +326,7 @@
     "    search_plan = await plan_searches(query)\n",
     "    search_results = await perform_searches(search_plan)\n",
     "    report = await write_report(query, search_results)\n",
-    "    await send_email(report)  \n",
-    "    print(\"Hooray!\")\n",
-    "\n",
-    "\n"
+    "    await send_email(report)"
    ],
    "outputs": [
     {
